# bazel-pybind11-abseil

./: .bazelrc  .dockerignore  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  requirements.in  requirements.txt
.github/workflows/: amd64_docker_bazel.yml  amd64_docker_cmake.yml  amd64_linux_bazel.yml  amd64_linux_cmake.yml  amd64_macos_bazel.yml  amd64_macos_cmake.yml  amd64_windows_bazel.yml  amd64_windows_cmake.yml  arm64_macos_bazel.yml  arm64_macos_cmake.yml
bazel/: BUILD.bazel  Makefile  requirements.in  requirements.txt  requirements_lock_3_10.txt  requirements_lock_3_11.txt  requirements_lock_3_12.txt  requirements_lock_3_9.txt
bazel/docker/alpine/: Dockerfile
bazel/docker/archlinux/: Dockerfile
bazel/docs/: docker.dot
bp11/foo/: BUILD.bazel  CMakeLists.txt  foo.cc  foo.cpp  foo.hpp  foo_test.cc  foo_test.cpp
bp11/foo/python/: BUILD.bazel  CMakeLists.txt  foo.cc  foo.cpp  foo_test.py  status_test.py
cmake/: BazelPybind11AbseilConfig.cmake.in  Makefile  check_deps.cmake  cpp.cmake  deps.cmake  python.cmake  system_deps.cmake
cmake/dependencies/: CMakeLists.txt
cmake/docker/almalinux/: Dockerfile
cmake/docker/alpine/: Dockerfile
cmake/docker/archlinux/: Dockerfile
cmake/docker/centos/: Dockerfile
cmake/docker/debian/: Dockerfile
cmake/docker/fedora/: Dockerfile
cmake/docker/manylinux/: Dockerfile
cmake/docker/opensuse/: Dockerfile
cmake/docker/rockylinux/: Dockerfile
cmake/docker/ubuntu/: Dockerfile
patches/: BUILD.bazel  googletest.patch  pybind11.patch  pybind11_abseil.patch
python/: __init__.py.in  setup.py.in
