package(default_visibility = ["//visibility:private"])

load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
  name = "bp11_requirements",
  extra_args = [
    "--allow-unsafe",  # Pin packages considered unsafe
    "--resolver=backtracking",  # Avoid warning, new default
  ],
  generate_hashes = False,
  requirements_in = "requirements.in",
  requirements_txt = "requirements.txt",
)
