# Python wrapper for foo library.
load("@rules_python//python:defs.bzl", "py_test")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@pip_deps//:requirements.bzl", "requirement")

pybind_extension(
    name = "pyfoo",
    srcs = ["foo.cpp"],
    deps = [
        "//bp11/foo:foo",
        "@pybind11_abseil//pybind11_abseil:import_status_module",
        "@pybind11_abseil//pybind11_abseil:absl_casters",
        "@pybind11_abseil//pybind11_abseil:status_casters",
    ],
)

py_test(
    name = "foo_test",
    size = "small",
    srcs = ["foo_test.py"],
    data = ["@pybind11_abseil//pybind11_abseil:status.so"],
    deps = [
      ":pyfoo",
      requirement("absl-py"),
      "@pybind11_abseil//pybind11_abseil:import_status_module",
      "@pybind11_abseil//pybind11_abseil:absl_casters",
      "@pybind11_abseil//pybind11_abseil:status_casters",
    ],
    python_version = "PY3",
    srcs_version = "PY3",
    tags = ["unit"],
)

py_test(
    name = "status_test",
    srcs = ["status_test.py"],
    data = [
      "@pybind11_abseil//pybind11_abseil:status.so",
    ],
    deps = [
      requirement("absl-py"),
    ],
    python_version = "PY3",
    srcs_version = "PY3",
)
