# Python wrapper for foo library.
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")
load("@pypi//:requirements.bzl", "requirement")

pybind_extension(
    name = "pyfoo",
    srcs = ["foo.cc"],
    deps = [
        "//bp11/foo:foo",
        "@pybind11_abseil//pybind11_abseil:import_status_module",
        "@pybind11_abseil//pybind11_abseil:absl_casters",
        "@pybind11_abseil//pybind11_abseil:status_casters",
    ],
)

py_library(
    name = "pyfoo_lib",
    data = [":pyfoo"],
    imports = ["."],
)

py_test(
    name = "foo_test",
    size = "small",
    srcs = ["foo_test.py"],
    deps = [
      ":pyfoo_lib",
      requirement("absl-py"),
      "@pybind11_abseil//pybind11_abseil:status",
    ],
    imports = [
      "../../../../org_pybind11_abseil",
    ],
    python_version = "PY3",
    tags = ["unit"],
)

py_test(
    name = "status_test",
    size = "small",
    srcs = ["status_test.py"],
    deps = [
      requirement("absl-py"),
      "@pybind11_abseil//pybind11_abseil:status",
    ],
    imports = [
      "../../../../org_pybind11_abseil",
    ],
    python_version = "PY3",
    srcs_version = "PY3",
)
